--- a/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
+++ b/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
@@ -355,7 +355,10 @@
                     <p id="choice11question" type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;"></p>
                     <div class="group2 ">
                     <iframe src="https://drive.google.com/file/d/1I8Jk1qL0a59E8Ojb_bT0bW--X8Dv57G0/preview" width="400" height="480" allow="autoplay"></iframe>
-                    <ul class="draggable-list" id="draggable-list"></ul>
+                    <div>
+                        <p>สลับเพื่อเรียงลำดับให้ถูกต้อง</p>
+                        <ul class="draggable-list" id="draggable-list"></ul>
+                    </div>
                     <input type="hidden" name="choice11" id="choice11result"></div>
                 </div>
                 <br>    
@@ -366,6 +369,8 @@
                         <div class="group">   
                         <iframe src="https://drive.google.com/file/d/1yiAQ9JNnb-9sqDIXhtn4EP21cM-mFcPm/preview" width="400" height="480" allow="autoplay"></iframe>
                         <p style="font-size: 20px;">
+                            <b style="color: black;">
+                            Algorithm</b> <br>
                             STEP 1: Start <br> 
                             STEP 2: Input two numbers in variable a and b <br> 
                             STEP 3: If (a>b), then print value of a, Otherwise Print value of b <br> 
@@ -393,6 +398,8 @@
                         <div class="group">   
                             <iframe src="https://drive.google.com/file/d/1powyVmgMMwji4OUxaiT5cGiYOYqtPhNQ/preview" width="400" height="480" allow="autoplay"></iframe>
                             <p style="font-size: 20px;">
+                                <b style="color: black;">
+                                Algorithm</b> <br>
                                 STEP 1: Start <br> 
                                 STEP 2: Calculate C=((F-32)5)/9 <br> 
                                 STEP 3: Input Fahrenheit temperature in variable <br> 
