--- a/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
+++ b/views/student/quiz/1_Algorithms_and_Flowcharts-quiz.ejs
@@ -351,7 +351,10 @@
                     <p id="choice11question" type="text" class="list-group-item list-group-item-action bg-dark" style="color: white;"></p>
                     <div class="group2 ">
                     <iframe src="https://drive.google.com/file/d/1I8Jk1qL0a59E8Ojb_bT0bW--X8Dv57G0/preview" width="400" height="480" allow="autoplay"></iframe>
-                    <ul class="draggable-list" id="draggable-list"></ul>
+                    <div>
+                        <p>สลับเพื่อเรียงลำดับให้ถูกต้อง</p>
+                        <ul class="draggable-list" id="draggable-list"></ul>
+                    </div>
                     <input type="hidden" name="choice11" id="choice11result"></div>
                 </div>
                 <br>    
@@ -362,6 +365,8 @@
                         <div class="group">   
                         <iframe src="https://drive.google.com/file/d/1yiAQ9JNnb-9sqDIXhtn4EP21cM-mFcPm/preview" width="400" height="480" allow="autoplay"></iframe>
                         <p style="font-size: 20px;">
+                            <b style="color: black;">
+                            Algorithm</b> <br>
                             STEP 1: Start <br> 
                             STEP 2: Input two numbers in variable a and b <br> 
                             STEP 3: If (a>b), then print value of a, Otherwise Print value of b <br> 
@@ -389,6 +394,8 @@
                         <div class="group">   
                             <iframe src="https://drive.google.com/file/d/1powyVmgMMwji4OUxaiT5cGiYOYqtPhNQ/preview" width="400" height="480" allow="autoplay"></iframe>
                             <p style="font-size: 20px;">
+                                <b style="color: black;">
+                                Algorithm</b> <br>
                                 STEP 1: Start <br> 
                                 STEP 2: Calculate C=((F-32)5)/9 <br> 
                                 STEP 3: Input Fahrenheit temperature in variable <br> 
@@ -577,7 +584,7 @@
                         <textarea style="height: 200px;" placeholder="วางลิงก์ที่นี่" name="sendLink191" type="text" rows="10" required></textarea>
                     </div><br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #453662;">
-                        19.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อพิมพ์ C และใส่ค่า C เป็น 36 (1 คะแนน)</p>
+                        19.2 (Result) ผลลัพธ์ของโปรแกรมนี้คืออะไร เมื่อพิมพ์ F และใส่ค่า C เป็น 36 (1 คะแนน)</p>
                         <textarea class="form-control" style="height: 100px;" rows="4" cols="30" name="expResult19" required></textarea>
                     <br>
                     <p type="text"  class="list-group-item list-group-item-action " style="color: white; background-color: #453662;">
