--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -24,15 +24,15 @@
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>2. Datatype and Variable </b>
-                                    <br><a href="/course-Datatype_and_Variable-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
+                                    <!--<br><a href="/course-Datatype_and_Variable-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>-->
                                     <br><a href="/course-Datatype_and_Variable" style="color:black">เนื้อหาบทเรียน </a>
-                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <!--<br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                     <br><br>
                                  </p>   
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
                                     <br><a href="/course-Datatype" style="color:black">เนื้อหาบทเรียน</a>
-                                    <br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <!--<br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
