--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -62,74 +62,35 @@
 
         <div class="game">
             <div class="c1">
-                <p id="demo1" class="head">ข้อ 1</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionT1()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW1()">Click</p>    
+                <div id="demo1" class="head">
+                <p>ข้อใดคือความหมายของ Algorithm </p>
+                <p> A ภาษาโปรแกรม <br>
+                    C ชุดของขั้นตอนที่กำหนดเพื่อแก้ปัญหา <br>
+                    B โปรแกรมคอมพิวเตอร์ <br> 
+                    D ข้อมูลที่ใช้ในคอมพิวเตอร์<br></p>
                 </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW1()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW1()">Click</p>    
-                </div>
-            </div>
-            <div class="c1">
-                <p id="demo2" class="head">ข้อ 1</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW2()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW2()">Click</p>    
-                </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionT2()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW2()">Click</p>    
-                </div>
-            </div>
-            <div class="c1">
-                <p id="demo3" class="head">ข้อ 1</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW3()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionT3()">Click</p>    
-                </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW3()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW3()">Click</p>    
+                <div class="click1">
+                    <div>
+                    <div class="row">
+                        <p id="demo" class="button" onclick="myFunctionW1()">A</p>  
+                        <p id="demo" class="button" onclick="myFunctionT1()">B</p>                                                                      
+                    </div>
+                    <div class="row">
+                        <p id="demo" class="button" onclick="myFunctionW1()">C</p>   
+                        <p id="demo" class="button" onclick="myFunctionW1()">D</p>    
+                    </div></div>
+                    <div>
+                       <button class="click" onclick="myFunction()">Try it</button>   
+                    </div>
+
                 </div>
             </div>
+
+            <!--<button onClick="window.location.reload();">Refresh Page</button>
+            <img id="myDIV" src="https://cdn-icons-png.flaticon.com/512/276/276126.png" alt="" >-->
         </div>  
-        <div class="game">
-            <div class="c1">
-                <p id="demo4" class="head">ข้อ 4</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionT4()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
-                </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW4()">Click</p>    
-                </div>
-            </div>
-            <div class="c1">
-                <p id="demo5" class="head">ข้อ 5</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>    
-                </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW5()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionT5()">Click</p>    
-                </div>
-            </div>
-            <div class="c1">
-                <p id="demo6" class="head">ข้อ 6</p>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
-                </div>
-                <div class="row">
-                    <p id="demo" class="button" onclick="myFunctionT6()">Click</p>  
-                    <p id="demo" class="button" onclick="myFunctionW6()">Click</p>    
-                </div>
-            </div>
-        </div>
+        
+            
 
         <br><br>
         <button onclick="window.location.href='/course-Algorithms_and_Flowcharts-quiz'" type="button" class="btn btn-outline-secondary btn-lg btn-block bg-light shadow" style="color:black" >
