--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -32,7 +32,7 @@
                                     <p class="wrapbox auto">
                                     <b>3. Input and Output</b>
                                     <br><a href="/course-Datatype" style="color:black">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
+                                    <!--<br><a href="/course-Datatype-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>4. Operators and Expressions</b>
