--- a/public/stylesheets/gamequiz.css
+++ b/public/stylesheets/gamequiz.css
@@ -4,11 +4,11 @@
     text-align: center;
     cursor: pointer;
     outline: none;
-    color: #fff;
-    background-color: #04AA6D;
+    color: #000000;
+    background-color: #fdff7c;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 5px #999;
+    box-shadow: 0 5px #c800ff;
 
 }
 #demo.button {
@@ -16,8 +16,12 @@
     width: 100px;
 }
 .head{
-    color: #4effbe;
+    color: #00ffee;
     font-size: 20px;
+    background-color: black;
+    height: 200px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 h3 {
@@ -32,19 +36,38 @@ h3 {
     box-shadow: 0 5px #666;
     transform: translateY(4px);
 }
+
 .row {
     display: flex;
-    padding-left: 30px;
+    padding: 15px;
 }
 .c1 {
     background-color: rgb(21, 0, 139);
-    height: 250px;
-    width: 300px;
+    height: 400px;
+    width: 400px;
     border-radius: 20px;
-    padding: 10px;
+    padding: 15px;
     align-items: center;
     margin: 20px;
 }
 .game {
     display: flex;
+}
+.click1 {
+    display: flex;
+    align-items: center;
+}
+
+img {
+    width: 60px;
+    height: 60px;
+}
+
+button.click {
+    background-color: fuchsia;
+    color: #fff;
+    border-radius: 50px;
+    height: 80px;
+    width: 80px;
+    margin-left: 20px;
 }
