--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -61,35 +61,120 @@
         <br><br>
 
         <div class="game">
-            <div class="c1">
-                <div id="demo1" class="head">
+            <!--* ข้อ 1 *-->
+            <div class="gamecontent">
+                <div id="demo1" class="question">
                 <p>ข้อใดคือความหมายของ Algorithm </p>
                 <p> A ภาษาโปรแกรม <br>
-                    C ชุดของขั้นตอนที่กำหนดเพื่อแก้ปัญหา <br>
                     B โปรแกรมคอมพิวเตอร์ <br> 
+                    C ชุดของขั้นตอนที่กำหนดเพื่อแก้ปัญหา <br>
                     D ข้อมูลที่ใช้ในคอมพิวเตอร์<br></p>
                 </div>
-                <div class="click1">
+                <div class="ans">
                     <div>
-                    <div class="row">
+                    <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW1()">A</p>  
                         <p id="demo" class="button" onclick="myFunctionT1()">B</p>                                                                      
                     </div>
-                    <div class="row">
+                    <div class="btn">
                         <p id="demo" class="button" onclick="myFunctionW1()">C</p>   
                         <p id="demo" class="button" onclick="myFunctionW1()">D</p>    
                     </div></div>
                     <div>
-                       <button class="click" onclick="myFunction()">Try it</button>   
+                       <button class="toggle" onclick="myFunction()">Try it</button>   
                     </div>
-
+                </div>
+            </div>
+            
+            <!--* ข้อ 2 *-->
+            <div class="gamecontent">
+                <div id="demo2" class="question">
+                <p>ลักษณะใดไม่ใช่คุณสมบัติของ Algorithm ที่ดี</p>
+                <p> A มีขั้นตอนซับซ้อนและยากต่อการทำความเข้าใจ <br>
+                    B มีการเรียงลำดับของขั้นตอนการทำงาน <br>
+                    C มีประสิทธิภาพ <br> 
+                    D มีความชัดเจน<br></p>
+                </div>
+                <div class="ans">
+                    <div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionT2()">A</p>  
+                        <p id="demo" class="button" onclick="myFunctionW2()">B</p>                                                                      
+                    </div>
+                    <div class="btn">
+                        <p id="demo" class="button" onclick="myFunctionW2()">C</p>   
+                        <p id="demo" class="button" onclick="myFunctionW2()">D</p>    
+                    </div></div>
+                    <div>
+                       <button class="toggle" onclick="myFunction()">Try it</button>   
+                    </div>
                 </div>
             </div>
 
-            <!--<button onClick="window.location.reload();">Refresh Page</button>
+            <!--<button class="click" onClick="window.location.reload();">Refresh Page</button>
             <img id="myDIV" src="https://cdn-icons-png.flaticon.com/512/276/276126.png" alt="" >-->
         </div>  
-        
+
+
+        <div class="game">
+        <!--* ข้อ 6 *-->
+        <div class="gamecontent">
+            <div id="demo6" class="question">
+            <p>Pseudo Code ต่อไปนี้จะพิมพ์อะไรออกมา</p>
+            <p style="color: aliceblue;"> x = 5 <br>
+                y = 10 <br>
+                IF x > y THEN <br>
+                &ensp;PRINT "X is greater" <br>
+                ELSE <br>
+                &ensp;PRINT "Y is greater" <br>
+                END IF <br></p>
+            </div>
+            <div class="ans">
+                <div>
+                <div class="btn">
+                    <p id="demo" class="button" onclick="myFunctionW6()">X is greater</p>  
+                    <p id="demo" class="button" onclick="myFunctionT6()">Y is greater</p>                                                                      
+                </div>
+                <div class="btn">
+                    <p id="demo" class="button" onclick="myFunctionW6()">ไม่มีผลลัพธ์</p>   
+                    <p style="font-size: 14px;" id="demo" class="button" onclick="myFunctionW2()">เกิดข้อผิดพลาด</p>    
+                </div></div>
+                <div>
+                   <button class="toggle" onclick="myFunction()">Try it</button>   
+                </div>
+            </div>
+        </div>
+        <!--* ข้อ 7 *-->
+        <div class="gamecontent">
+            <div id="demo7" class="question">
+            <p>Pseudo Code ต่อไปนี้จะพิมพ์อะไรออกมา</p>
+            <p style="color: aliceblue;"> x = 5 <br>
+                sum = 0 <br>
+                FOR i = 1 TO 5 <br>
+                &ensp;sum = sum + i <br>
+                END FOR <br>
+                PRINT sum <br></p>
+            </div>
+            <div class="ans">
+                <div>
+                <div class="btn">
+                    <p id="demo" class="button" onclick="myFunctionW7()">5 </p>  
+                    <p id="demo" class="button" onclick="myFunctionW7()">10</p>                                                                      
+                </div>
+                <div class="btn">
+                    <p id="demo" class="button" onclick="myFunctionT7()">15</p>   
+                    <p id="demo" class="button" onclick="myFunctionW7()">20</p>    
+                </div></div>
+                <div>
+                   <button class="toggle" onclick="myFunction()">Try it</button>   
+                </div>
+            </div>
+        </div>
+
+        <!--<button class="click" onClick="window.location.reload();">Refresh Page</button>
+        <img id="myDIV" src="https://cdn-icons-png.flaticon.com/512/276/276126.png" alt="" >-->
+    </div>  
+    </div>    
             
 
         <br><br>
