--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -64,7 +64,7 @@
             <!--* ข้อ 1 *-->
             <div class="gamecontent">
                 <div id="demo1" class="question">
-                <p>ข้อใดคือความหมายของ Algorithm </p>
+                <b>ข้อใดคือความหมายของ Algorithm </b>
                 <p> A ภาษาโปรแกรม <br>
                     B โปรแกรมคอมพิวเตอร์ <br> 
                     C ชุดของขั้นตอนที่กำหนดเพื่อแก้ปัญหา <br>
@@ -81,7 +81,8 @@
                         <p id="demo" class="button" onclick="myFunctionW1()">D</p>    
                     </div></div>
                     <div>
-                       <button class="toggle" onclick="myFunction()">Try it</button>   
+                       <button class="toggle" onclick="myFunction()"><svg style="width: 70px;" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>game_controller_round [#792]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-300.000000, -4719.000000)" fill="#000000"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M261.035,4572 L259.035,4572 C257.93,4572 257,4572.895 257,4574 L257,4576 C257,4576.552 256.587,4577 256.035,4577 L252.035,4577 C251.483,4577 251,4576.552 251,4576 L251,4574 C251,4572.895 250.14,4572 249.035,4572 L247.035,4572 C246.483,4572 246,4571.552 246,4571 L246,4567 C246,4566.448 246.483,4566 247.035,4566 L249.035,4566 C250.14,4566 251,4565.105 251,4564 L251,4562 C251,4561.448 251.483,4561 252.035,4561 L256.035,4561 C256.587,4561 257,4561.448 257,4562 L257,4564 C257,4565.105 257.93,4566 259.035,4566 L261.035,4566 C261.587,4566 262,4566.448 262,4567 L262,4571 C262,4571.552 261.587,4572 261.035,4572 M259,4563 L259,4561 C259,4559.895 258.14,4559 257.035,4559 L251.035,4559 C249.93,4559 249,4559.895 249,4561 L249,4563 C249,4563.552 248.587,4564 248.035,4564 L246.035,4564 C244.93,4564 244,4564.895 244,4566 L244,4572.001 C244,4573.105 244.912,4574 246.016,4574.001 L248.009,4574.002 C248.561,4574.002 249,4574.45 249,4575.002 L249,4577 C249,4578.105 249.93,4579 251.035,4579 L257.035,4579 C258.14,4579 259,4578.105 259,4577 L259,4575 C259,4574.448 259.483,4574 260.035,4574 L262.035,4574 C263.14,4574 264,4573.105 264,4572 L264,4566 C264,4564.895 263.14,4564 262.035,4564 L260.035,4564 C259.483,4564 259,4563.552 259,4563" id="game_controller_round-[#792]"> </path> </g> </g> </g> </g></svg>
+                    </button>   
                     </div>
                 </div>
             </div>
@@ -89,7 +90,7 @@
             <!--* ข้อ 2 *-->
             <div class="gamecontent">
                 <div id="demo2" class="question">
-                <p>ลักษณะใดไม่ใช่คุณสมบัติของ Algorithm ที่ดี</p>
+                <b>ลักษณะใดไม่ใช่คุณสมบัติของ Algorithm ที่ดี</b>
                 <p> A มีขั้นตอนซับซ้อนและยากต่อการทำความเข้าใจ <br>
                     B มีการเรียงลำดับของขั้นตอนการทำงาน <br>
                     C มีประสิทธิภาพ <br> 
@@ -106,7 +107,8 @@
                         <p id="demo" class="button" onclick="myFunctionW2()">D</p>    
                     </div></div>
                     <div>
-                       <button class="toggle" onclick="myFunction()">Try it</button>   
+                       <button class="toggle" onclick="myFunction()"><svg style="width: 70px;" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>game_controller_round [#792]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-300.000000, -4719.000000)" fill="#000000"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M261.035,4572 L259.035,4572 C257.93,4572 257,4572.895 257,4574 L257,4576 C257,4576.552 256.587,4577 256.035,4577 L252.035,4577 C251.483,4577 251,4576.552 251,4576 L251,4574 C251,4572.895 250.14,4572 249.035,4572 L247.035,4572 C246.483,4572 246,4571.552 246,4571 L246,4567 C246,4566.448 246.483,4566 247.035,4566 L249.035,4566 C250.14,4566 251,4565.105 251,4564 L251,4562 C251,4561.448 251.483,4561 252.035,4561 L256.035,4561 C256.587,4561 257,4561.448 257,4562 L257,4564 C257,4565.105 257.93,4566 259.035,4566 L261.035,4566 C261.587,4566 262,4566.448 262,4567 L262,4571 C262,4571.552 261.587,4572 261.035,4572 M259,4563 L259,4561 C259,4559.895 258.14,4559 257.035,4559 L251.035,4559 C249.93,4559 249,4559.895 249,4561 L249,4563 C249,4563.552 248.587,4564 248.035,4564 L246.035,4564 C244.93,4564 244,4564.895 244,4566 L244,4572.001 C244,4573.105 244.912,4574 246.016,4574.001 L248.009,4574.002 C248.561,4574.002 249,4574.45 249,4575.002 L249,4577 C249,4578.105 249.93,4579 251.035,4579 L257.035,4579 C258.14,4579 259,4578.105 259,4577 L259,4575 C259,4574.448 259.483,4574 260.035,4574 L262.035,4574 C263.14,4574 264,4573.105 264,4572 L264,4566 C264,4564.895 263.14,4564 262.035,4564 L260.035,4564 C259.483,4564 259,4563.552 259,4563" id="game_controller_round-[#792]"> </path> </g> </g> </g> </g></svg>
+                    </button>   
                     </div>
                 </div>
             </div>
@@ -120,8 +122,8 @@
         <!--* ข้อ 6 *-->
         <div class="gamecontent">
             <div id="demo6" class="question">
-            <p>Pseudo Code ต่อไปนี้จะพิมพ์อะไรออกมา</p>
-            <p style="color: aliceblue;"> x = 5 <br>
+            <b>Pseudo Code ต่อไปนี้จะพิมพ์อะไรออกมา</b>
+            <p> x = 5 <br>
                 y = 10 <br>
                 IF x > y THEN <br>
                 &ensp;PRINT "X is greater" <br>
@@ -140,20 +142,24 @@
                     <p style="font-size: 14px;" id="demo" class="button" onclick="myFunctionW2()">เกิดข้อผิดพลาด</p>    
                 </div></div>
                 <div>
-                   <button class="toggle" onclick="myFunction()">Try it</button>   
+                   <button class="toggle" onclick="myFunction()"><svg style="width: 70px;" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>game_controller_round [#792]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-300.000000, -4719.000000)" fill="#000000"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M261.035,4572 L259.035,4572 C257.93,4572 257,4572.895 257,4574 L257,4576 C257,4576.552 256.587,4577 256.035,4577 L252.035,4577 C251.483,4577 251,4576.552 251,4576 L251,4574 C251,4572.895 250.14,4572 249.035,4572 L247.035,4572 C246.483,4572 246,4571.552 246,4571 L246,4567 C246,4566.448 246.483,4566 247.035,4566 L249.035,4566 C250.14,4566 251,4565.105 251,4564 L251,4562 C251,4561.448 251.483,4561 252.035,4561 L256.035,4561 C256.587,4561 257,4561.448 257,4562 L257,4564 C257,4565.105 257.93,4566 259.035,4566 L261.035,4566 C261.587,4566 262,4566.448 262,4567 L262,4571 C262,4571.552 261.587,4572 261.035,4572 M259,4563 L259,4561 C259,4559.895 258.14,4559 257.035,4559 L251.035,4559 C249.93,4559 249,4559.895 249,4561 L249,4563 C249,4563.552 248.587,4564 248.035,4564 L246.035,4564 C244.93,4564 244,4564.895 244,4566 L244,4572.001 C244,4573.105 244.912,4574 246.016,4574.001 L248.009,4574.002 C248.561,4574.002 249,4574.45 249,4575.002 L249,4577 C249,4578.105 249.93,4579 251.035,4579 L257.035,4579 C258.14,4579 259,4578.105 259,4577 L259,4575 C259,4574.448 259.483,4574 260.035,4574 L262.035,4574 C263.14,4574 264,4573.105 264,4572 L264,4566 C264,4564.895 263.14,4564 262.035,4564 L260.035,4564 C259.483,4564 259,4563.552 259,4563" id="game_controller_round-[#792]"> </path> </g> </g> </g> </g></svg>
+                </button>   
                 </div>
             </div>
         </div>
+
+        
         <!--* ข้อ 7 *-->
         <div class="gamecontent">
-            <div id="demo7" class="question">
-            <p>Pseudo Code ต่อไปนี้จะพิมพ์อะไรออกมา</p>
-            <p style="color: aliceblue;"> x = 5 <br>
+            <div id="demo7"class="question">
+            <b>Pseudo Code ต่อไปนี้จะพิมพ์อะไรออกมา</b>
+            <p> x = 5 <br>
                 sum = 0 <br>
                 FOR i = 1 TO 5 <br>
                 &ensp;sum = sum + i <br>
                 END FOR <br>
                 PRINT sum <br></p>
+         
             </div>
             <div class="ans">
                 <div>
@@ -166,15 +172,27 @@
                     <p id="demo" class="button" onclick="myFunctionW7()">20</p>    
                 </div></div>
                 <div>
-                   <button class="toggle" onclick="myFunction()">Try it</button>   
+                   <button class="toggle" onclick="myFunction()"><svg style="width: 70px;" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>game_controller_round [#792]</title> <desc>Created with Sketch.</desc> <defs> </defs> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="Dribbble-Light-Preview" transform="translate(-300.000000, -4719.000000)" fill="#000000"> <g id="icons" transform="translate(56.000000, 160.000000)"> <path d="M261.035,4572 L259.035,4572 C257.93,4572 257,4572.895 257,4574 L257,4576 C257,4576.552 256.587,4577 256.035,4577 L252.035,4577 C251.483,4577 251,4576.552 251,4576 L251,4574 C251,4572.895 250.14,4572 249.035,4572 L247.035,4572 C246.483,4572 246,4571.552 246,4571 L246,4567 C246,4566.448 246.483,4566 247.035,4566 L249.035,4566 C250.14,4566 251,4565.105 251,4564 L251,4562 C251,4561.448 251.483,4561 252.035,4561 L256.035,4561 C256.587,4561 257,4561.448 257,4562 L257,4564 C257,4565.105 257.93,4566 259.035,4566 L261.035,4566 C261.587,4566 262,4566.448 262,4567 L262,4571 C262,4571.552 261.587,4572 261.035,4572 M259,4563 L259,4561 C259,4559.895 258.14,4559 257.035,4559 L251.035,4559 C249.93,4559 249,4559.895 249,4561 L249,4563 C249,4563.552 248.587,4564 248.035,4564 L246.035,4564 C244.93,4564 244,4564.895 244,4566 L244,4572.001 C244,4573.105 244.912,4574 246.016,4574.001 L248.009,4574.002 C248.561,4574.002 249,4574.45 249,4575.002 L249,4577 C249,4578.105 249.93,4579 251.035,4579 L257.035,4579 C258.14,4579 259,4578.105 259,4577 L259,4575 C259,4574.448 259.483,4574 260.035,4574 L262.035,4574 C263.14,4574 264,4573.105 264,4572 L264,4566 C264,4564.895 263.14,4564 262.035,4564 L260.035,4564 C259.483,4564 259,4563.552 259,4563" id="game_controller_round-[#792]"> </path> </g> </g> </g> </g></svg>
+                </button>   
                 </div>
             </div>
         </div>
 
         <!--<button class="click" onClick="window.location.reload();">Refresh Page</button>
-        <img id="myDIV" src="https://cdn-icons-png.flaticon.com/512/276/276126.png" alt="" >-->
-    </div>  
+        
+        <div id="myDIV" style="height:400px; width:400px; display:none; align-items: flex-end;">
+            <img  src="https://cdn-icons-png.flaticon.com/512/276/276126.png">
+        </div> -->
+
+
+
+
+
+    
     </div>    
+
+
+
             
 
         <br><br>
