--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -18,13 +18,13 @@
                 <div class="col">
     
     
-                    <% if(RecommendaResult[0].RecommendCourse === "Introduction"){ %> <%# Output จาก Recommend มาเทียบ %> 
+                    <% if(RecommendaResult[0].RecommendCourse === "Algorithms_and_Flowcharts"){ %> <%# Output จาก Recommend มาเทียบ %> 
                         
-                            <button onclick="window.location.href='/course-Introduction'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                            <button onclick="window.location.href='/course-Algorithms_and_Flowcharts'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"> <i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                
-                    <% }else if(RecommendaResult[0].RecommendCourse === "String"){ %>
+                    <% }else if(RecommendaResult[0].RecommendCourse === "Datatype_and_Variable"){ %>
                         
-                            <button onclick="window.location.href='/course-String'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                            <button onclick="window.location.href='/course-Datatype_and_Variable'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                         
                     <% }else if(RecommendaResult[0].RecommendCourse === "Datatype"){ %>
                         
