--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -26,7 +26,7 @@
                                     <b>2. Datatype and Variable </b>
                                     <br><a href="/course-Datatype_and_Variable-pretest" style="color:black">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Datatype_and_Variable" style="color:black">เนื้อหาบทเรียน </a>
-                                    <!--<br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>-->
+                                    <br><a href="/course-Datatype_and_Variable-quiz" style="color:black">แบบทดสอบหลังเรียน</a>
                                     <br><br>
                                  </p>   
                                     <p class="wrapbox auto">
